# datajob

./: .gitignore  .pre-commit-config.yaml  404.html  Makefile  README.md  app.py  index.html  mkdocs.yml  pyproject.toml  setup.py  sitemap.xml
.devcontainer/: devcontainer.Dockerfile  devcontainer.json
.github/workflows/: codeql-analysis.yml  docs.yml  examples.yml  pr.yml
api/: index.html
datajob/: __init__.py  data_job_context.py  datajob.py  datajob_base.py  datajob_context.py  datajob_execution_input.py  datajob_stack.py  glue_job.py  glue_job_context.py  stepfunctions_workflow.py  stepfunctionsworkflow.py  tech_skills_parser_stack.py
datajob/glue/: glue_job.py
datajob/package/: wheel.py
datajob/sagemaker/: __init__.py  sagemaker_job.py
datajob/sns/: sns.py
datajob/stepfunctions/: __init__.py  stepfunctions_execute.py  stepfunctions_run.py  stepfunctions_workflow.py
datajob/stepfunctions_workflow/: __init__.py
datajob_tests/: datajob_context_test.py  datajob_stack_test.py  datajob_test.py  stepfunctions_workflow_test.py  test_datajob.py  test_datajob_base.py  test_datajob_context.py  test_datajob_stack.py
datajob_tests/datajob_cli_tests/: test_datajob_deploy.py  test_datajob_execute.py
datajob_tests/datajob_stack/: datajob_stack_test.py
datajob_tests/datajob_stack/sampleproject/: setup.py
datajob_tests/examples/: test_simple_data_pipeline.py
datajob_tests/glue/: glue_job_test.py  test_glue_job.py
datajob_tests/resources/: test_run_datajob_successfully.json
datajob_tests/sagemaker/: test_sagemaker.py
datajob_tests/sagemaker/resources/: processing.py  train.py
datajob_tests/sampleproject/: setup.py
datajob_tests/sampleproject/tests/: test_simple.py
datajob_tests/stepfunctions/: stepfunctions_workflow_test.py  test_stepfunctions.py  test_stepfunctions_execute.py  test_stepfunctions_run.py  test_stepfunctions_workflow.py
datajob_tests/stepfunctions_workflow/: test_stepfunctions_workflow.py
docs/: api.md
examples/data_pipeline_parallel/: README.md  datajob_stack.py
examples/data_pipeline_pyspark/: README.md  datajob_stack.py  setup.py
examples/data_pipeline_pyspark/glue_job/: glue_pyspark_example.py
examples/data_pipeline_simple/: README.md  create_100_simple.py  datajob_stack.py  datajob_stack_explicit.py
examples/data_pipeline_simple/data_pipeline_simple/: task2.py
examples/data_pipeline_with_packaged_project/: README.md  cdk.json  datajob_stack.py  datajob_stack_explicit.py  pyproject.toml  setup.py
examples/data_pipeline_with_packaged_project/data_pipeline_with_packaged_project/: task1.py  task2.py
examples/data_pipeline_with_packaged_project/glue_jobs/: task1.py
examples/glue_job_include_packaged_project/: datajob_stack.py  setup.py
examples/glue_job_include_packaged_project/glue_job_include_packaged_project/: glue_helper.py
examples/glue_job_simple/: datajob_stack.py
examples/ml_pipeline/: datajob_stack.py
examples/ml_pipeline/resources/: preprocessing.py
examples/ml_pipeline_abalone/: README.md  datajob_stack.py
examples/ml_pipeline_abalone/jobs/: prepare_dataset.py
examples/ml_pipeline_end_to_end/: README.md
examples/ml_pipeline_end_to_end/jobs/: prepare_dataset.py
examples/ml_pipeline_sagemaker_scikitlearn/: README.md  datajob_stack.py
examples/ml_pipeline_sagemaker_scikitlearn/resources/: preprocessing.py
examples/ml_pipeline_scikitlearn/: README.md  datajob_stack.py
examples/ml_pipeline_scikitlearn/resources/: preprocessing.py
examples/simple_data_pipeline/: datajob_config.py  datajob_stack.py  setup.py
examples/simple_data_pipeline/glue/: task3.py
search/: search_index.json
(+1 files in other folders)
