[tool.poetry]
name = "datajob"
version = "0.4.0"
description = "Build and deploy a serverless data pipeline with no effort on AWS."
authors = ["Vincent Claes <vincent.v.claes@gmail.com>"]
license = "Apache Software License (Apache 2.0)"

readme = 'README.md'  # Markdown files are supported

repository = "https://github.com/vincentclaes/datajob"
homepage = "https://github.com/vincentclaes/datajob"

keywords = ["pipelines", "machine learning", "data pipelines", "data science", "data engineering"]

[tool.poetry.dependencies]
python = "^3.6.1"
"aws-cdk.core" = "^1.70.0"
"aws-cdk.aws-glue" = "^1.70.0"
"aws-cdk.aws-s3-deployment" = "^1.70.0"
"aws-cdk.cloudformation-include" = "^1.76.0"
stepfunctions = "^1.1.2"
contextvars = "^2.4"
typer = "^0.3.2"
dephell = "^0.8.3"
aws-empty-bucket = "^2.4.0"

[tool.poetry.dev-dependencies]
mock = "^4.0.2"
moto = "^1.3.16"
dephell = "^0.8.3"
pre-commit = "^2.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
datajob = 'datajob.datajob:run'

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}
