[tool.poetry]
name = "datajob"
version = "0.9.0"
description = "Build and deploy a serverless data pipeline with no effort on AWS."
authors = ["Vincent Claes <vincent.v.claes@gmail.com>"]
license = "Apache Software License (Apache 2.0)"

readme = 'README.md'  # Markdown files are supported

repository = "https://github.com/vincentclaes/datajob"
homepage = "https://github.com/vincentclaes/datajob"

keywords = ["pipelines", "machine learning", "data pipelines", "data science", "data engineering"]

[tool.poetry.dependencies]
python = ">=3.6.1,<4.0"
stepfunctions = "^2.1.0"
contextvars = "^2.4"
typer = "^0.3.2"
aws-empty-bucket = "^2.4.0"
"aws-cdk.core" = "^1.109.0"
"aws-cdk.aws-glue" = "^1.109.0"
"aws-cdk.aws-s3-deployment" = "^1.109.0"
"aws-cdk.aws-stepfunctions" = "^1.109.0"
"aws-cdk.aws-sns-subscriptions" = "^1.109.0"
rich = "^9.13.0"
toposort = "^1.6"

[tool.poetry.dev-dependencies]
moto = "^1.3.16"
pre-commit = "^2.9.3"
pytest = "^6.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
datajob = 'datajob.datajob:run'

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}
