[tool.poetry]
name = "data_pipeline_with_packaged_project"
version = "0.1.0"
description = ""
authors = ["Vincent Claes <vincent.v.claes@gmail.com>"]
license = ""

readme = 'README.md'  # Markdown files are supported

[tool.poetry.dependencies]
python = "^3.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
